<resources>
    <string name="app_name">Alerta Rescate</string>
    <string name="info">Informate</string>
    <string name="desastres">DESASTRES</string>
    <string name="rastreo">RASTREO</string>
    <string name="terremoto">TERREMOTO</string>
    <string name="antes">ANTES</string>
    <string name="durante">DURANTE</string>
    <string name="despues">DESPUES</string>
    <string name="terremoto_antes_1">- Determinar lugares que puedan convertirse en un peligro durante  un terremoto.</string>
    <string name="terremoto_antes_2">- Formar parte de simulacros de terremoto</string>
    <string name="terremoto_antes_3">- Preparar y mantener una reserva de alimentos no perecibles y agua al menos 3 días</string>
    <string name="terremoto_antes_4">- Preparar una mochila de emergencia ante desastres</string>
    <string name="terremoto_durante_1">- Calmarte, el pánico puede ser peligroso</string>
    <string name="terremoto_durante_2">- Posicionarte alejándote de ventanas, vidrios, espejos, material que pueda caer y generar lesiones.</string>
    <string name="terremoto_durante_3">- Dirigirte hacia la calle, alejándote de los postes, cables eléctricos.</string>
    <string name="terremoto_durante_4">- En caso no llegues a salir de la edificación, busca un sitio seguro para protegerte.</string>
    <string name="terremoto_durante_5">- Utiliza un radio para enterarte de la situación.</string>
    <string name="terremoto_despues_1">- Analiza el estado de tu casa o lugar de trabajo. Préstale mayor interés si es que observas grietas, muros inclinados. Procura que tu vivienda sea revisada por personal experto</string>
    <string name="terremoto_despues_2">- Reúne a tus familiares en un lugar seguro</string>
    <string name="terremoto_despues_3">- Verificar si están funcionando las redes móviles para usarlos en periodos cortos.</string>
    <string name="terremoto_despues_4">- En caso de quedar atrapado, avisar mediante gritos, ruidos, pitos, tu ubicación actual. </string>
    <string name="terremoto_despues_5">- Si se tiene que mover a una persona inconsciente, primero estabilizar el cuello y la espalda, luego pida ayuda de inmediato.</string>
    <string name="erupcion_antes_1">- Conocer el mapa de los peligros volcánicos que afecten tu zona, determinando las zonas de alto, mediano y bajo riesgo.</string>
    <string name="erupcion_antes_2">- Conocer las rutas de evacuación y evacuar hacia una zona donde no haya riesgo.</string>
    <string name="erupcion_antes_3">- Si te encontraras con familiares, quedar un punto de encuentro ya que la prevención correcta para hacer frente a estos desastres, es evacuar.</string>
    <string name="erupcion_antes_4">- Estar atentos a las alarmas, estas generalmente pueden avisarte la ocurrencia de una erupción.</string>
    <string name="erupcion_antes_5">- Mantener confinada agua potable y alimentos no perecederos, cubrir estos depósitos para evitar que se contaminen de cenizas o gases.</string>
    <string name="erupcion_antes_6">- Ten listo siempre una mochila de emergencias y un maletín de primeros auxilios.</string>
    <string name="erupcion_durante_1">- Primordialmente se debe conservar la calma</string>
    <string name="erupcion_durante_2">- Reunirte con tu familia y dar enfoque a los miembros más vulnerables, como niños y ancianos.</string>
    <string name="erupcion_durante_3">- Toma solo tus objetos de valor y asegúrate de cumplir con los planes de evacuación rápidamente, tomando la vía adecuada de evacuación.</string>
    <string name="erupcion_durante_4">- Desplázate hacia lugares lejos del volcán, si no estás en la zona de riesgo, no congestionar la zona queriendo hacer uso de las vías de escape.</string>
    <string name="erupcion_durante_5">- Busca un refugio bajo techo, ahora debes de protegerte de la ceniza y los gases, es por eso que aléjate de los valles, ríos, emanaciones de gases.</string>
    <string name="erupcion_durante_6">- Protégete los ojos y respira a través de una tela humedecida con agua o vinagre, esta actuara como un filtro a los gases y polvo volcánico.</string>
    <string name="erupcion_durante_7">- En caso de explosiones, estas pueden causar ondas de choque que pueden romper vidrios y ventanas. Alejarse de esta zona o cubrir para que la ruptura de estas no sea violenta ni cause lesiones.</string>
    <string name="erupcion_despues_1">- Permanecer en un sitio seguro hasta que las autoridades informen de la situación actual.</string>
    <string name="erupcion_despues_2">- Procura no tratar de regresar a casa, y menos si esta zona fue área de impacto.</string>
    <string name="erupcion_despues_3">- Evita hacer uso desmedido de las líneas telefónicas, utiliza la radio, mensajes de texto.</string>
    <string name="erupcion_despues_4">- No bebas ni comas ningún alimento que sospeches se encuentre contaminado.</string>
    <string name="erupcion_despues_5">- Colabora con la población, pues las tareas en comunidad son de gran ayuda para la recuperación de la emergencia.</string>
    <string name="inundacion_antes_1">- Llene recipientes con agua limpia, por si acaso el agua de la llave llega a contaminarse.</string>
    <string name="inundacion_antes_2">- Mueva al segundo piso o a un lugar alto los elementos de más valor.</string>
    <string name="inundacion_antes_3">- Esté preparado para evacuar su hogar.</string>
    <string name="inundacion_antes_4">- Identifique una ruta de evacuación, y otras vías alternativas.</string>
    <string name="inundacion_antes_5">- Investigue si su propiedad está en una zona de posibles inundaciones o si se ha inundado con anterioridad.</string>
    <string name="inundacion_antes_6">- Tenga a mano una mochila de emergencias.</string>
    <string name="inundacion_antes_7">- Establezca un punto de reunión, por si la familia se encuentra dispersa.</string>
    <string name="inundacion_antes_8">- Todos en la familia deben saber cómo actuar, cómo cortar el suministro de gas, luz y agua.</string>
    <string name="inundacion_antes_9">- Ubique los elementos tóxicos (venenos) en gabinetes cerrados y fuera del alcance del agua.</string>
    <string name="inundacion_antes_10">- Guarde en un buen lugar algo de comida, agua y ropa.</string>
    <string name="inundacion_antes_11">- Coloque documentos importantes en una bolsa de plástico para que no se destruyan con el agua.</string>
    <string name="inundacion_antes_12">- Observe y no olvide donde guardan en la casa la lámpara o linterna y asegúrese que tenga pilas. Manténgase informado, escuche las noticias con atención.</string>
    <string name="inundacion_durante_1">- Si está dentro de su casa: Escuche la radio o televisión para estar informado de la emergencia, y posibles instrucciones de la autoridad a cargo.</string>
    <string name="inundacion_durante_2">- Corte la luz, agua y gas y evacue su hogar si la situación así lo amerita o las autoridades así lo indican.</string>
    <string name="inundacion_durante_3">- Si está en el exterior: Suba a un lugar alto y permanezca allí.</string>
    <string name="inundacion_durante_4">- Evite caminar por aguas en movimiento. Si está en la calle, tenga precaución al caminar sobre agua, ya que las tapas de las alcantarillas de agua suelen salirse debido a la presión, y usted puede caer en dicho hueco.</string>
    <string name="inundacion_durante_5">- Si está en un auto: Si llega a un área inundada, dé la vuelta y tome otra dirección. Si el auto se detiene o se atasca, abandónelo de inmediato y suba a un lugar alto.</string>
    <string name="inundacion_durante_6">- Durante una evacuación: Si la situación así lo amerita o las autoridades lo indican, evacue su hogar lo antes posible.</string>
    <string name="inundacion_durante_7">- Debe estar atento a las indicaciones que se dan por radio y/o televisión.</string>
    <string name="inundacion_durante_8">- Prepárese con tu familia por si es necesario que se vayan a un lugar seguro.</string>
    <string name="inundacion_durante_9">- No se acerque a cables ni postes de luz.</string>
    <string name="inundacion_durante_10">- Si necesita cambiar de lugar, solo lleve lo necesario.</string>
    <string name="inundacion_durante_11">- No camine cerca de donde está el agua, pues el nivel puede subir rápidamente.</string>
    <string name="inundacion_durante_12">- No intente cruzar cauces de ríos, pues el agua lleva muchas cosas como troncos u objetos que pueden golpearlo fuertemente.</string>
    <string name="inundacion_despues_1">- Si tuvo que dejar la casa, no regrese a ella hasta que las autoridades indiquen que lo pueden hacer.</string>
    <string name="inundacion_despues_2">- Su casa debe ser revisada, ya que es probable que se derrumbe, no entre a ella hasta que estén seguros de que la pueden usar.</string>
    <string name="inundacion_despues_3">- No se acerque a construcciones que es posible que se derrumben.</string>
    <string name="inundacion_despues_4">- No toque ni pise cables eléctricos caídos.</string>
    <string name="inundacion_despues_5">- No tome alimentos ni comida que haya sido mojada por el agua de la inundación.</string>
    <string name="inundacion_despues_6">- No se acerque a la zona inundada ya que su presencia puede entorpecer el trabajo de las personas que auxilian a otros afectados.</string>
    <string name="inundacion_despues_7">- Los heridos no se deben mover, es mejor avisar a las personas especializadas para este tipo de ayuda.</string>
    <string name="inundacion_despues_8">- Escuche la radio o vea la televisión para obtener información sobre la emergencia, y posibles instrucciones de la autoridad a cargo.</string>
    <string name="inundacion_despues_9">- Vuelva a su hogar sólo cuando sea seguro o las autoridades así lo indiquen. No entre a los edificios si todavía hay agua alrededor.</string>
    <string name="deslizamiento_antes_1">- No construyas tu casa en pendientes de terreno inestable, ni en faldas de cerros húmedos, ni con materiales pesados en terrenos débiles.</string>
    <string name="deslizamiento_antes_2">- Si vives en una pendiente, asegúrate que la estructura de tu casa esté firmemente construida. </string>
    <string name="deslizamiento_antes_3">- Conserva la vegetación de las montañas y laderas de los ríos.</string>
    <string name="deslizamiento_antes_4">- Asegúrate que exista un sistema de drenaje adecuado y despejado, sin filtraciones de agua. </string>
    <string name="deslizamiento_antes_5">- No arrojes basura o piedras en pendientes.</string>
    <string name="deslizamiento_antes_6">- Reconoce las zonas que pueden deslizarse en tu localidad y las rutas de evacuación o escape para llegar a las zonas seguras, establecidas por las autoridades de la comunidad.</string>
    <string name="deslizamiento_durante_1">- Evita el pánico, y en lo posible, ayuda a ancianos, niños, mujeres y personas nerviosas. </string>
    <string name="deslizamiento_durante_2">- Si te percatas del inicio de un deslizamiento, avisa a las autoridades. </string>
    <string name="mochila">Al organizar tu Kit de Emergencia, considera las necesidades de niños, niñas, personas en situación de discapacidad, embarazadas y personas mayores.</string>
    <string name="mochila_1">- Agua (2 litros por persona).</string>
    <string name="mochila_2">- Comida enlatada y abrelatas manual.</string>
    <string name="mochila_3">- Papel higiénico.</string>
    <string name="mochila_4">- Linterna y pilas de repuesto.</string>
    <string name="mochila_5">- Radio portátil con pilas adicionales.</string>
    <string name="mochila_6">- Elementos de primeros auxilios.</string>
    <string name="mochila_7">- Medicamentos.</string>
    <string name="mochila_8">- Llaves de tu casa y auto.</string>
    <string name="mochila_9">- Dinero en efectivo.</string>
    <string name="mochila_10">- Ropa de abrigo.</string>
    <string name="mochila_11">- Guantes de seguridad.</string>
</resources>